trying to get mobile ready

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta content="iwantto" name="I Want To"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta content="author" name="Erika O'Neil, Morvarid Mozafarian, Jon Rasmussen, Betsy Gottesman, Eugene Kwon"/>
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,900' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
@@ -11,6 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="responsive.css">
     <script src="script.js"></script>
     <title>I Want To...</title>
 </head>
