--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div id="selectPrev" class="prev glyphicon glyphicon-chevron-left btn"></div>
 
-    <div id="landing" class="col-md-12">
+    <div id="landing" class="col-md-12 col-xs-12">
         <div class="mdl-selectfield">
             <select id="verbSelect" class="select-element">
                 <option value="watch">watch</option>
@@ -37,20 +37,20 @@
                 <option value="listen">listen to</option>
             </select>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12 col-xs-12">
             <p class="blurb">something about</p>
         </div>
-        <div class="col-md-12">
+        <div class="col-md-12 col-xs-12">
             <div class="input-container">
-                <input type="text" id="nounInput" class="noun col-md-12">
+                <input type="text" id="nounInput" class="noun col-md-12 col-xs-12">
                 <div class="border"></div>
             </div>
         </div>
         <div class="button-group row">
-            <div class="col-md-12">
+            <div class="col-md-12 col-xs-12">
                 <a href="#" id="nowButton" class="now-button">NOW</a>
             </div>
-            <div class="col-md-12 rb-wrapper">
+            <div class="col-md-12 col-xs-12 rb-wrapper">
                 <a href="#" id="random-btn" class="random-button">Randomize</a>
             </div>
         </div>
